fix(nested rows): fixed border color and align (#2622)
* fix(nested rows): fixed border color and align

* fix(nestted row) : lint issue fixed

* fix(nested rows) : prettier lint issue fixed

* fix(nested rows): changed tokens for v11

* fix(nested rows) : lint issue fixed

* fix(Datagrid): nested row spacing

* fix(nested rows): padding spacing added

* fix(nested rows) : margin removed

* feat(nested row): border on focus added

---------

--- a/packages/cloud-cognitive/src/components/Datagrid/styles/_datagrid.scss
+++ b/packages/cloud-cognitive/src/components/Datagrid/styles/_datagrid.scss
@@ -426,7 +426,7 @@
     );
     width: 1px;
     height: var(--#{$block-class}--indicator-height);
-    border-left: 1px solid $background-brand;
+    border-left: 1px solid $border-subtle-selected-01;
     content: '';
   }
 }
